fix: Delete body overflow hidden

--- a/src/style.scss
+++ b/src/style.scss
@@ -16,9 +16,6 @@ body {
   font-family: 'M+ Type-1 (general-j) Regular', 'Noto Sans JP', sans-serif;
   margin: 0px;
   background: #eeeeee;
-  @include sp {
-    overflow: hidden;
-  }
 }
 
 @include pc {
